@@ -30,6 +30,10 @@
 # ChineseCharacter, StrokeOrder, Glyph, Flags
 "⻏",HP-WG-S,0,
 "⻏",HPWG-S,1,
+"阝","HP-WG-S",0,
+"阝","HPWG-S",1,
+"⻖","HP-WG-S",0,
+"⻖","HPWG-S",1,
 "⻝",SP-N-D-HZ-H-H-ST-P-D,1,
 "⻝",SP-N-D-HZ-H-H-ST-P-N,0,
 "⾷",SP-N-D-HZ-H-H-ST-P-D,1,
@@ -71,6 +75,8 @@
 "亻","P-S",0,
 "⼉","SP SWG",0,
 "儿","SP SWG",0,
+"⼉","SP SW",1,S
+"儿","SP SW",1,S
 "⼊","P-TN",0,
 "入","P-TN",0,
 "⼋","P TN",0,
@@ -126,6 +132,7 @@
 "乎","P-D-P-H-SG",0,
 "么","P PZ-N",0,
 "乃","HZZZG-SP",0,
+"及","HZZP-SP-N",0,
 "主","D H-H-S-H",0,
 "也","HG-S-SWG",0,
 "九","SP-HZWG",0,
@@ -210,6 +217,7 @@
 "四","S-HZ-SP-SW-H",0,
 "女","PD-P-H",0,
 "心","D BXG D D",0,
+"必","D BXG D D P",0,
 "尔","P-HG SG D D",0,
 "讠","D HZT",0,
 "丷","D P",0,
@@ -222,3 +230,33 @@
 "免","P-HP-S-HZ-H-SP-SWG",1,
 "兔","P-HP-S-HZ-S-H-SP-SWG-D",0,
 "兔","P-HP-S-HZ-H-SP-SWG-D",1,
+"⾗","H-P-WG-P-P-P-N",0,
+"豕","H-P-WG-P-P-P-N",0,
+"犭","P-WG-P",0,
+"⺨","P-WG-P",0,
+"艮","HZ-H-H-ST-P-N",0,
+"东","H-SZ-SG D D",0,
+"继","PZ-PZ T D D S-H D D SZ",0,"
+"米","D D S-H D D",0,
+"⺰","PZ-PZ T",0,
+"纟","PZ-PZ T",0,
+"⺯","PZ-PZ-D D D D",0,
+"断","D D S-H D D SZ P-SP-H-S",0,
+"斤","P-SP-H-S",0,
+"乞","P-H HXWG",0,
+"公","P N PZ-D",0,
+"又","HP-P",0,
+"今","P-N D HP",0,
+"弓","HZ-H-SZWG",0,
+"马","HZ-SZWG H",0,
+"亡","D H-SW",0,
+"牙","H-SZ-SG-P",0,
+"山","S-SZ-S",0,
+"民","HZ-H-ST-XG",0,
+"〇","Q",0,
+"建","HZ-H-H-H-H-S HZZP-N",0,
+"⼵","HZZP-N",0,
+"专","H-H-SZZ-N",0,
+"巛","PD-PD-PD",0,
+"氵","D D T",0,
+"⺡","D D T",0,
